force-app/main/default/objects/Payment_Error_Log__c/Payment_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Payment Error Log</label>
    <nameField>
        <label>Payment Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>