force-app/main/default/objects/Payment_Error_Log__c/fields/Error_Time__c.field-meta.xml
<CustomField>
    <fullName>Error_Time__c</fullName>
    <label>Error Time</label>
    <type>DateTime</type>
</CustomField>