force-app/main/default/objects/Payment_Error_Log__c/fields/Gateway_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Transaction_ID__c</fullName>
    <label>Gateway Transaction ID</label>
    <type>TextArea</type>
</CustomField>