force-app/main/default/objects/Payment_Error_Log__c/fields/Related_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Related_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Milestone</label>
    <referenceTo>Payment_Milestone__c</referenceTo>
    <relationshipLabel>Payment Error Logs</relationshipLabel>
    <relationshipName>Payment_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>